hphp/hack/test/typecheck/multiple_inheritance.php
<?hh // partial

class Bar {}
class Baz {}

class Foo extends Bar, Baz {}
